# pocketpy-crash-reproducible-example

./: .gitmodules  CMakeLists.txt  README.md  globalobject.h  main.cpp  myobject.cpp  myobject.h  pocketpy.h
